--- a/Owlreach.html
+++ b/Owlreach.html
@@ -15,7 +15,7 @@
     </section>
 
     <footer id="aboutus">
-        <h2>Follow our updates</h2>
+        <h2>Follow our socials for updates!</h2>
         <div class="footbar">
             <div class="foot"><img id="logos" src="instagram.png"><a class="footobj"
                     href="https://www.instagram.com/ftc10195/">@ftc10195</a>
