--- a/Sponsors.html
+++ b/Sponsors.html
@@ -61,7 +61,7 @@
                     href="https://www.instagram.com/ftc10195/">@ftc10195</a>
             </div>
             <div class="foot"><img id="logos" src="twitter.png"><a class="footobj"
-                    href="https://twitter.com/ftc10195">@ftc10195</a></div>
+                    href="https://twitter.com/10195Ftc">@10195Ftc</a></div>
             <div class="foot"><img id="logos" src="tiktok.png"><a class="footobj"
                     href="https://www.youtube.com/channel/UC_onYFtGVh7VkBqVpQ_IPWQ">@FTC Night Owls</a>
             </div>
