--- a/AboutUs.html
+++ b/AboutUs.html
@@ -49,7 +49,7 @@
         <div id="memba">
             <div class="member"><img id="memba1" src="ajay_bio.png" alt="Ajay" title="ajay_bio" width="135"
                     height="180">
-                <h4 id="memba">Ajay Dakoriya</h4>
+                <h4 id="memba">evan pfeifer</h4>
                 <p id="memba">CAD/Designer</p>
             </div>
 
@@ -61,7 +61,7 @@
 
             <div class="member"><img img id="memba1" src="veer_bio.png" alt="Veer" title="veer_bio" width="135"
                     height="180">
-                <h4 id="memba">Veer Goparaju</h4>
+                <h4 id="memba">evan huemmer</h4>
                 <p id="memba">Builder</p>
             </div>
             <div class="member"><img img id="memba1" src="mark_bio.png" alt="Mark" title="mark_bio" width="135"
@@ -78,25 +78,55 @@
 
             <div class="member"><img img id="memba1" src="cara_bio.png" alt="cara" title="cara_bio" width="135"
                     height="180">
-                <h4 id="memba">Cara Pielow</h4>
-                <p id="memba">Marketing</p>
+                    <h4 id="memba">Tanisha Goil</h4>
+                <p id="memba">programemr</p>ch
             </div>
             <div class="member"><img img id="memba1" src="trisha_bio.png" alt="Trisha" title="trisha_bio" width="135"
                     height="180">
-                <h4 id="memba">Trisha Raj</h4>
-                <p id="memba">Outreach Coordinator</p>
+                <h4 id="memba">Ayaam Ghimire</h4>
+                <p id="memba">Team Captain</p>
             </div>
 
             <div class="member"><img img id="memba1" src="kevail_bio.png" alt="Keval" title="kevail_bio" width="135"
                     height="180">
-                <h4 id="memba">Keval Shah</h4>
-                <p id="memba">Captain and Programmer</p>
+                <h4 id="memba">Colin</h4>
+                <p id="memba">Cad/builder</p>
             </div>
 
             <div class="member"><img img id="memba1" src="austin_bio.png" alt="Austin" title="austin_bio" width="135"
                     height="180">
                 <h4 id="memba">Austin Varghese</h4>
                 <p id="memba">CAD/Designer</p>
+            </div>
+
+            <div class="member"><img img id="memba1" src="austin_bio.png" alt="Austin" title="austin_bio" width="135"
+                    height="180">
+                <h4 id="memba">Aryahi Tiwari</h4>
+                <p id="memba">programmer/web designer</p>
+            </div>
+
+            <div class="member"><img img id="memba1" src="austin_bio.png" alt="Austin" title="austin_bio" width="135"
+                    height="180">
+                <h4 id="memba">Nikhil Nataraju</h4>
+                <p id="memba">CAD/Designer</p>
+            </div>
+
+            <div class="member"><img img id="memba1" src="austin_bio.png" alt="Austin" title="austin_bio" width="135"
+                    height="180">
+                <h4 id="memba">Vihaan Mitra</h4>
+                <p id="memba">CAD/Designer</p>
+            </div>
+
+            <div class="member"><img img id="memba1" src="austin_bio.png" alt="Austin" title="austin_bio" width="135"
+                    height="180">
+                <h4 id="memba">Faith</h4>
+                <p id="memba">marketing/outreach</p>
+            </div>
+
+            <div class="member"><img img id="memba1" src="austin_bio.png" alt="Austin" title="austin_bio" width="135"
+                    height="180">
+                <h4 id="memba">Altajani</h4>
+                <p id="memba">Programmer</p>
             </div>
 
         </div>
